# de-course-week5

./: .gitignore  Dockerfile  airflow.cfg  airflow.cfg2  docker-compose-hw.yml  docker-compose.yml  entrypoint.sh  init.sql  init_hw.sql  install-airflow.sh  install.sh  pyproject.toml  requirements.txt  run-test.sh  run.sh
.github/workflows/: workflow.yaml
dags/jobs/: covid1.py  covid2.py  covid3.py  covid4.py  covid5.py  covid_pipeline.py
dags/tasks/: covid_aggregator.py  covid_aggregator2.py  covid_exporter.py  covid_exporter1.py  covid_exporter2.py  covid_exporter3.py
homework/dags/: my_dag.py  stock_export.py  stock_exporter.py
test/: test_homework.py  unittest.py
tests/: test_homework.py
